Update admin pages to use Font Awesome icons. (#1765)

--- a/resources/less/admin/modules/manage-categories.less
+++ b/resources/less/admin/modules/manage-categories.less
@@ -62,9 +62,16 @@
 .awpcp-manage-categories-icons-meaning-icon {
     background-color: #DDD;
     font-size: 0.9em;
+    line-height: 16px;
     margin: 5px 2px 0 0;
-    padding: 4px;
+    padding: 6px;
     border-radius: 2px;
+
+    i {
+        font-size: 16px;
+        margin-right: 4px;
+        vertical-align: bottom;
+    }
 }
 .awpcp-manage-categories-icons-meaning span {
     margin-left: 2px;
