--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -148,6 +148,11 @@
         a, a:hover {
             text-decoration: none;
         }
+
+        span {
+            font-size: 16px;
+            line-height: 20px;
+        }
     }
     .is-primary .awpcp-uploaded-file-action {
         background: #ECF6EA;
