--- a/resources/less/admin/common.less
+++ b/resources/less/admin/common.less
@@ -21,3 +21,13 @@
     font-weight: bold;
     width: 100% !important;
 }
+
+.awpcp-action-button {
+    height: 26px !important;
+    line-height: 24px !important;
+    margin: 0 2px 2px 0 !important;
+    padding-left: 6px !important;
+    padding-right: 6px !important;
+    text-align: center;
+    width: 28.625px;
+}
