Update appearance of Categories widget. (#2043)

--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -27,6 +27,14 @@
     margin-bottom: 0;
     margin-left: 0;
 }
+.widget_awpcp-categories .top-level-categories {
+    margin: 0;
+    padding: 0 !important;
+
+    li {
+        border: none !important;
+    }
+}
 .widget_awpcp-categories .top-level-categories .sub-categories li:before {
     content: '—';
     margin-right: 3px;
