Remove margin from Region Selector partials.

--- a/resources/less/components/multiple-region-selector.less
+++ b/resources/less/components/multiple-region-selector.less
@@ -32,6 +32,7 @@
 
         .awpcp-region-selector-partial {
             list-style-type: none;
+            margin: 0;
 
             label {
                 display: block;
