Show Listing Actions at the top of the Edit Listing page. (#2116)

--- a/resources/less/frontend/modules/submit-listing-page.less
+++ b/resources/less/frontend/modules/submit-listing-page.less
@@ -78,3 +78,13 @@
 .awpcp-order-submit-listing-section__edit_mode > form {
     margin: 0;
 }
+
+.awpcp-actions-submit-listing-section__edit_mode .awpcp-listing-action-confirmation {
+    span {
+        padding: 0 4px;
+    }
+
+    button {
+        margin: 0 4px;
+    }
+}
