--- a/resources/less/messages.less
+++ b/resources/less/messages.less
@@ -11,7 +11,7 @@ body:not(.wp-admin), #classiwrapper {
         }
     }
 
-    .awpcp-message.updated, .awpcp-message-updated {
+    .awpcp-message.updated, .awpcp-message-updated, .awpcp-message-success {
         border-color: #E6DB55;
     }
     .awpcp-message.error, .awpcp-message-error {
