Add Facebook Integration using Zapier/IFTTT Webhooks.

--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -609,9 +609,8 @@
 
 
 /* Facebook Settings. */
-#awpcp-admin-settings form.facebook-integration-settings .section {
-    border-bottom: dotted 1px #ccc;
-    padding: 0 0 10px 0;
+.awpcp-facebook-inline-documentation {
+    padding: 0 0 40px;
 }
 
 #awpcp-admin-settings .facebook-integration-diagnostics {
@@ -619,8 +618,4 @@
     background: #d7f5ff;
     border: solid 1px #bad5df;
     border-radius: 4px;
-}
-
-#awpcp-admin-settings form.facebook-integration-settings .section.disabled {
-    color: #ccc;
 }
