--- a/resources/less/frontend/modules/submit-listing-page.less
+++ b/resources/less/frontend/modules/submit-listing-page.less
@@ -88,3 +88,19 @@
         margin: 0 4px;
     }
 }
+
+.awpcp-save-submit-listing-section {
+    .awpcp-preview-listing-button-container {
+        text-align: center;
+    }
+
+    .awpcp-listing-preview-container {
+        border-top: 1px solid #d2d2d2;
+        margin-top: 12px;
+        padding-top: 2px;
+
+        .awpcp-classifieds-search-bar, .awpcp-classifieds-menu {
+            display: none;
+        }
+    }
+}
