Make the primary button the first button on the right. (#2142)

--- a/resources/less/admin/modules/form-fields.less
+++ b/resources/less/admin/modules/form-fields.less
@@ -103,7 +103,7 @@
 .awpcp-admin-form-submit-buttons {
     margin-top: 26px;
 
-    input[type="submit"], input[type="button"] {
-        margin-right: 4px;
+    input[type="submit"], input[type="button"], a.button {
+        margin-right: 8px;
     }
 }
