Update appearance of Fee Plan forms on mobile. (#2142)

--- a/resources/less/admin/modules/fees.less
+++ b/resources/less/admin/modules/fees.less
@@ -127,22 +127,18 @@
 
 .awpcp-fee-duration-field {
     margin-bottom: 6px;
-    label {
-        float: left;
-        margin-top: 5px;
-        width: 60%;
-    }
+
     div {
-        margin-left: 60%;
-        width: 40%;
+        display: flex;
 
         input, select {
-            width: 48%;
+            flex: 1;
             box-sizing: border-box;
         }
         input {
             margin-right: 1%;
             vertical-align: middle;
+            width: 50%;
         }
     }
 }
