Update pagination control. (#2141)

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -39,5 +39,6 @@
 @import 'components/social-buttons.less';
 @import 'components/media-manager.less';
 @import 'components/media-uploader.less';
+@import 'components/pagination.less';
 @import 'components/payment-terms-list.less';
 @import 'components/thumbnails-generator.less';
