--- a/resources/less/admin/modules/manage-categories.less
+++ b/resources/less/admin/modules/manage-categories.less
@@ -34,8 +34,8 @@
  * Pagination
  --------------------------------------------------------------------------- */
 
-.awpcp-manage-categories-top-pagination {
-    float: left;
+.awpcp-admin-categories .awpcp-pagination {
+    margin: 8px 0;
 }
 
 /**
