--- a/resources/less/components/pagination.less
+++ b/resources/less/components/pagination.less
@@ -1,13 +1,18 @@
-.pager {
-    align-items: center;
+.awpcp-pagination {
+    align-items: flex-end;
     display: flex;
     float: right;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
     justify-content: stretch;
 }
 
+.awpcp-pagination-summary {
+    padding-right: 12px;
+}
 .awpcp-pagination-links {
+    margin-bottom: 8px;
+
     .awpcp-pagination-links--link {
         display: inline-block;
         margin: 0 2px;
