Remove Description column from table on Manage Fees.
The table looks less packed.

--- a/resources/less/admin/modules/fees.less
+++ b/resources/less/admin/modules/fees.less
@@ -11,8 +11,12 @@
 }
 
 .awpcp-admin-fees {
+    .column-name {
+        width: 15%;
+    }
+
     .column-categories {
-        width: 17%;
+        width: 15%;
 
         .category-checklist {
             height: 100px;
@@ -35,7 +39,7 @@
     }
 
     .column-price, .column-credits {
-        width: 13%;
+        width: 10%;
     }
 }
 
