Update appearance of Delete Listing prompt.

--- a/resources/less/colors.less
+++ b/resources/less/colors.less
@@ -4,4 +4,5 @@
 
 @error-message-background-color: #FFEBE8;
 @error-message-border-color: #CC0000;
+// The plain value used for the font-color was copied to frontend.less on BuddyPress Listings.
 @error-message-font-color: #ff0000;
