--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -126,11 +126,12 @@
     }
 
     .awpcp-uploaded-file-action {
+        background: #FBFBFB;
         border: 1px solid #E2E2E2;
         border-radius: 2px;
         flex: 0 0 auto;
+        list-style: none;
         margin: 0 1px;
-        background: #FBFBFB;
 
         a, label {
             background: transparent center center no-repeat;
