--- a/resources/less/components/categories-list.less
+++ b/resources/less/components/categories-list.less
@@ -3,6 +3,8 @@
         clear: left;
         display: block;
         list-style: none;
+        margin: 0;
+        padding: 0;
 
         li {
             float: left;
