Update appearance of menu items in Twenty Nineteen.

--- a/resources/less/components/classifieds-menu.less
+++ b/resources/less/components/classifieds-menu.less
@@ -14,6 +14,7 @@
 }
 .awpcp-classifieds-menu--menu-item-link {
     box-sizing: border-box;
+    display: inline-block;
     text-align: center;
     width: 100%;
 }
