Fix appearance of attachments list on Responsive theme. (#2140)

--- a/resources/less/frontend/modules/attachments-list.less
+++ b/resources/less/frontend/modules/attachments-list.less
@@ -16,6 +16,8 @@
     padding: 0;
 
     .awpcp-attachments-list-item {
+        box-sizing: border-box;
+        flex: 0 1 auto;
         margin-bottom: 8px;
         padding: 0;
         text-align: center;
@@ -29,6 +31,7 @@
 
         img {
             box-shadow: none;
+            box-sizing: border-box;
             display: block;
             margin: 0 auto;
             width: 100%;
