--- a/resources/less/frontend/modules/attachments-list.less
+++ b/resources/less/frontend/modules/attachments-list.less
@@ -70,7 +70,7 @@
     #classiwrapper .awpcp-attachments-list,
     #displayimagethumbs ul {
         .awpcp-attachments-list-item {
-            width: 25%;
+            width: auto;
         }
 
         .awpcp-attchment-column-width-1-1 {
@@ -81,6 +81,9 @@
         }
         .awpcp-attchment-column-width-1-3 {
             width: 33.33%;
+        }
+        .awpcp-attchment-column-width-1-4 {
+            width: 25%;
         }
     }
 }
