--- a/resources/less/components/form-steps.less
+++ b/resources/less/components/form-steps.less
@@ -1,6 +1,11 @@
 .awpcp-form-steps {
     margin-bottom: 10px;
 
+    > ul {
+        margin: 0 !important;
+        padding: 0 !important;
+    }
+
     .awpcp-form-steps-step {
         background: #FEFEFE;
         border-width: 1px 1px 1px 0;
