Remove margin and padding from Payment Terms List component.

--- a/resources/less/components/payment-terms-list.less
+++ b/resources/less/components/payment-terms-list.less
@@ -1,5 +1,6 @@
 .awpcp-payment-terms-list {
-    margin: 0;
+    margin: 0 !important;
+    padding: 0 !important;
 
     .awpcp-payment-term {
         .awpcp-box;
