Add .h-awpcp-nomargin-nopadding CSS helper.

--- a/resources/less/common.less
+++ b/resources/less/common.less
@@ -1,3 +1,9 @@
+@import 'common/state.less';
+@import 'common/thickbox.less';
+@import 'common/spinner.less';
+
+@import 'helpers.less';
+
 /* old clearfix */
 .fixfloat {
     clear:both;
