--- a/resources/less/components/form-steps.less
+++ b/resources/less/components/form-steps.less
@@ -1,11 +1,6 @@
 .awpcp-form-steps {
     margin-bottom: 10px;
 
-    > ul {
-        margin: 0 !important;
-        padding: 0 !important;
-    }
-
     .awpcp-form-steps-step {
         background: #FEFEFE;
         border-width: 1px 1px 1px 0;
@@ -86,4 +81,8 @@
             color: #999;
         }
     }
+}
+
+.m-awpcp-form-steps__list {
+    .h-awpcp-nomargin-nopadding();
 }
