--- a/resources/less/components/payment-terms-list.less
+++ b/resources/less/components/payment-terms-list.less
@@ -1,6 +1,5 @@
 .awpcp-payment-terms-list {
-    margin: 0 !important;
-    padding: 0 !important;
+    .h-awpcp-nomargin-nopadding();
 
     .awpcp-payment-term {
         .awpcp-box;
