Fix appearance of Form Steps module.

--- a/resources/less/components/form-steps.less
+++ b/resources/less/components/form-steps.less
@@ -7,7 +7,7 @@
         border-style: solid;
         border-color: #AAA;
         box-shadow: 0px 1px 1px rgba(69, 69, 69, 0.3);
-        display: inline-block;
+        display: block;
         margin: 0;
 
         &:first-child {
@@ -24,7 +24,7 @@
     .awpcp-form-steps-step-inner {
         color: #333;
         cursor: default;
-        display: inline-block;
+        display: block;
         font-size: 0.95em;
         font-weight: 500;
         line-height: 1.5em;
@@ -85,4 +85,6 @@
 
 .m-awpcp-form-steps__list {
     .h-awpcp-nomargin-nopadding();
+
+    display: flex;
 }
