--- a/resources/less/components/categories-list.less
+++ b/resources/less/components/categories-list.less
@@ -1,10 +1,10 @@
 #awpcpcatlayout {
     .showcategoriesmainlist {
+        .h-awpcp-nomargin-nopadding();
+
         clear: left;
         display: block;
         list-style: none;
-        margin: 0;
-        padding: 0;
 
         li {
             float: left;
@@ -16,7 +16,10 @@
                 text-decoration:none;
             }
             ul {
-                margin:0px 0px 20px 10px; list-style:none;
+                .h-awpcp-nopadding();
+
+                list-style:none;
+                margin: 0px 0px 4px 10px;
             }
         }
         li.columns-1 {
