Do not set width: auto for PDF thumbnails. (#2228)

--- a/resources/less/frontend/modules/attachments-list.less
+++ b/resources/less/frontend/modules/attachments-list.less
@@ -28,7 +28,9 @@
             display: block;
             text-decoration: none;
         }
+    }
 
+    .awpcp-attachment-type-image {
         img {
             box-shadow: none;
             box-sizing: border-box;
@@ -45,10 +47,6 @@
             background: #f2f2f2;
             border: 1px solid #d3d3d3;
             padding: 8px;
-
-            img {
-                width: auto;
-            }
         }
     }
 }
