Add better CSS classes for Select2 results. (#2353)

--- a/resources/less/components/category-dropdown.less
+++ b/resources/less/components/category-dropdown.less
@@ -22,3 +22,20 @@
         }
     }
 }
+
+.awpcp-category-dropdown-option-level-2:before {
+    content: "\00A0\00A0\00A0 ";
+    display: inline-block;
+}
+.awpcp-category-dropdown-option-level-3:before {
+    content: "\00A0\00A0\00A0\00A0\00A0\00A0 ";
+    display: inline-block;
+}
+.awpcp-category-dropdown-option-level-4:before {
+    content: "\00A0\00A0\00A0\00A0\00A0\00A0\00A0\00A0\00A0 ";
+    display: inline-block;
+}
+.awpcp-category-dropdown-option-level-5:before {
+    content: "\00A0\00A0\00A0\00A0\00A0\00A0\00A0\00A0\00A0\00A0\00A0\00A0 ";
+    display: inline-block;
+}
