Disable box-shadow for category icons img and a tags.

--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -357,12 +357,18 @@ p.maincategoryclass {
     margin: 0 0 3px 0;
 }
 
+/*
+ * Category Icons
+ * ----------------------------------------------------------------------------
+ */
 .awpcp-category-icon {
+    box-shadow: none !important;
     display: inline-block;
     margin: 0 4px;
 }
 .awpcp-category-icon-image,
 .categoryicon {
+    box-shadow: none !important;
     box-sizing: border-box;
     vertical-align: middle;
     max-width: 100%;
