--- a/resources/less/components/listings-widget.less
+++ b/resources/less/components/listings-widget.less
@@ -84,6 +84,7 @@
             a {
                 display: block !important;
                 margin: 0 auto !important;
+                position: relative;
                 width: 100%;
 
                 img {
