The list of images on individual pages shows list-style-type markers on awpcp.staging. (#2484)

--- a/resources/less/frontend/modules/attachments-list.less
+++ b/resources/less/frontend/modules/attachments-list.less
@@ -11,9 +11,12 @@
     flex: 0 0 auto;
     flex-wrap: wrap;
     justify-content: space-between;
-    list-style-type: none;
     margin: 0;
     padding: 0;
+
+    li {
+        list-style-type: none;
+    }
 
     .awpcp-attachments-list-item {
         box-sizing: border-box;
