Update AWPCPUSERLISTINGS to provide management features similar to those available on the ad management panel

--- a/resources/less/frontend/modules/listings.less
+++ b/resources/less/frontend/modules/listings.less
@@ -2,3 +2,35 @@
     display: inline-block;
     position: relative;
 }
+
+.awpcp-action-button {
+    height: 26px !important;
+    line-height: 24px !important;
+    margin: 0 2px 2px 0 !important;
+    padding-left: 6px !important;
+    padding-right: 6px !important;
+    text-align: center;
+    width: 28.625px;
+    color: #555;
+    border-color: #ccc;
+    background: #f7f7f7;
+    box-shadow: 0 1px 0 #ccc !important;
+    vertical-align: top;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 13px;
+    cursor: pointer;
+    border-width: 1px;
+    border-style: solid;
+    -webkit-appearance: none;
+    border-radius: 3px;
+    white-space: nowrap;
+    box-sizing: border-box;
+}
+
+.awpcp-user-renew {
+    margin: 10px 0;
+    .fa-spinner {
+        display: none;
+    }
+}
