--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -141,6 +141,7 @@
             height: 24px;
             padding: 2px;
             width: 24px;
+            line-height: 20px;
         }
         &:hover {
             border-color: #B3B3B3;
