Thumbnail not showing properly on default theme (#2595)
#2595

--- a/resources/less/frontend/modules/listing-excerpt.less
+++ b/resources/less/frontend/modules/listing-excerpt.less
@@ -2,6 +2,9 @@
     background: #F9F9F9;
     box-sizing: border-box;
     padding: 5px;
+    h1, h2, h3, h4, h4, h6 {
+        clear: unset;
+    }
 }
 .awpcp-listing-excerpt-thumbnail {
     box-sizing: border-box;
