utton layout cleanup, totally inconsistent #2596

--- a/resources/less/components/classifieds-menu.less
+++ b/resources/less/components/classifieds-menu.less
@@ -4,8 +4,11 @@
  * to force our rules.
  */
 .awpcp-classifieds-menu {
-    margin: 8pt 0 !important;
-    padding: 0 !important;
+    display: flex;
+    flex: 1 0 50%;
+    flex-wrap: wrap;
+    margin: 0 0 4px;
+    padding: 0 4px !important;
 
     .awpcp-classifieds-menu--menu-item {
         box-sizing: border-box;
@@ -22,6 +25,9 @@
         display: inline-block;
         text-align: center;
         width: 100%;
+        flex: 1 0 50%;
+        margin: 0 0 4px;
+        height: 100%;
     }
 }
 
