--- a/resources/less/frontend/modules/attachments-list.less
+++ b/resources/less/frontend/modules/attachments-list.less
@@ -10,7 +10,7 @@
     display: flex;
     flex: 0 0 auto;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: left;
     margin: 0;
     padding: 0;
 
