Regions Selector dropdown menu arrow hard to click on mobile
 #2884

--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -2,13 +2,14 @@
 
 .js-handler {
     display: block;
-    float: right;
+    cursor: pointer;
 }
 .js-handler span {
     background: transparent url(../images/bullet_arrow_up.png) center center no-repeat;
     display: block;
     padding: 5px 1px;
     width: 16px; height: 16px;
+    float: right;
 }
 .js-handler .open {
     background-image: url(../images/bullet_arrow_down.png);
