--- a/resources/css/awpcpstyle-lte-ie-7.css
+++ b/resources/css/awpcpstyle-lte-ie-7.css
@@ -1,1 +1,1 @@
-.awpcp-listings-widget-items-list .awpcp-listings-widget-item .awpcplatestthumb a img{width:100%}/*# sourceMappingURL=awpcpstyle-lte-ie-7.css.map */
+.awpcp-listings-widget-items-list .awpcp-listings-widget-item .awpcplatestthumb a img{width:100%}
