--- a/resources/less/components/category-switcher.less
+++ b/resources/less/components/category-switcher.less
@@ -1,7 +1,8 @@
 .awpcp-category-switcher {
     float: left;
     margin: 0 0 10px;
-    width: 50%;
+    min-width: 80%;
+    max-width: 100%;
 
     .awpcp-category-dropdown-container {
         align-items: center;
