Fix styling in checkout expiration date fields. Related #3008

--- a/resources/less/components/billing-form.less
+++ b/resources/less/components/billing-form.less
@@ -15,7 +15,8 @@
     width: 270px;
 }
 .awpcp-billing-form .short {
-    width: 50px;
+    display: inline-block;
+    width: 80px;
 }
 
 .awpcp-billing-form .awpcp-form-group {
@@ -25,6 +26,7 @@
     display: block;
     float: none;
     width: auto;
+    text-align: center;
 }
 
 .awpcp-billing-form .awpcp-error {
